<resources>
    <string name="app_name">Movies App</string>
    <string name="most_popular">Most Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="network_connection">Please check network Connection</string>
    <string name="movieName">Thor : Rangogrk</string>
    <string name="relaseDate">2105</string>
    <string name="rate">8.1/10</string>
    <string name="overview">A volcanic eruption threatens the remaining dinosaurs on the island of Isla Nublar, where the creatures have freely roamed for several years after the demise of an animal theme park known as Jurassic World. Claire Dearing, the former park manager, has now founded the Dinosaur Protection Group, an organization dedicated to protecting the dinosaurs. To help with her cause, Claire has recruited Owen Grady, a former dinosaur trainer who worked at the park, to prevent the extinction of the dinosaurs once again.</string>
    <string name="trailers">Trailers</string>

    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="author">Author</string>
    <string name="content">content</string>
    <string name="reviews">Reviews</string>
    <string name="no_reviews">No Reviews</string>
    <string name="favorite">Favorite</string>
    <string name="share">Share</string>
</resources>
